--- a/preguntas.html
+++ b/preguntas.html
@@ -4,43 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/estilos.css">
-    <title>Preguntas Frecuentes</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Preguntas Frecuentes - Tecno Movil</title>
 </head>
 <body>
     <header>
-        <h1>Aca Le ponemos una imagen y todas las cosas que podemos hacer</h1> <br>
+        <DIV class="container">
+        
+            <nav class="navbar navbar-expand-lg styles=backgroun-color: bg-danger fixed-top">
+                <img class="logo" src="img/LOGO.png" alt="logotipo" class="logo">
+                <div class="collapse navbar-collapse mb-30" id="navbarTogglerDemo02"  >
+                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#" >INICIO <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#" >PRODUCTOS <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">PROMOCIONES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">AYUDA</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </DIV>
+         <br>
     </header>
-   <h1> PAGO EN FORMA ONLINE (NO PRESENCIAL)</h1> <br>
-
-
-
- 
-
+<div class="preguntas">
+<h1> PAGO EN FORMA ONLINE (NO PRESENCIAL)</h1> 
+<br> 
 Plan Ahora 12 20%+ A Través de TODOPAGO
- 
-<br>
-<br>
-<h3>Transferencia o depósito bancario (Pesos).</h3> 
+<br><br>
+<h3>Transferencia o depósito bancario.</h3> 
 <br>
 <p> En todos estos casos se toma el mismo precio publicado en nuestra web
-<br>
-<br>
+<br><br>
 <h1>PAGO EN NUESTRO LOCAL (PRESENCIAL)</h1> 
 <br> <br>
 <p> Efectivo, Débito, Transferencia o depósito bancario. En todos estos casos se toma el mismo precio publicado en nuestra web</p>
 <br>
 <h3> Tarjetas de crédito: A través de Posnet </h3> 
 <br>
-<p>
-    1 cuota 5%+ sobre el precio publicado <br>
-3 cuotas 20%+ sobre el precio publicado <br>
-6 cuotas 30%+ sobre el precio publicado <br>
+<ul>
+    <li>
+        1 cuota 5%+ sobre el precio publicado 
+    </li>
+    <li>
+        3 cuotas 20%+ sobre el precio publicado
+    </li>
+    <li>
+        6 cuotas 30%+ sobre el precio publicado
+    </li>
+</ul>
+<br>
+<h1>PREGUNTAS FRECUENTES</h1> 
+
 </p>
 <br>
 <h3>¿Los productos se encuentran en stock?</h3> 
 <br>
-<p> Sí, todos los productos publicados se encuentran en existencia en nuestro local (Salvo los que indican «INGRESANDO» que estarían disponibles en la fecha señalada en el producto) </p>
+<p> Sí, todos los productos publicados se encuentran en existencia en nuestro local. </p>
 <br>
 <h3>¿Hacen envíos?</h3> 
 <br>
@@ -52,13 +79,9 @@ Plan Ahora 12 20%+ A Través de TODOPAGO
 <br>
 <h3>¿Entregan factura y garantía?</h3> 
 <br>
-<p> En todas las ventas que realizamos se entrega factura electrónica fiscal. Bajo ningún concepto ni excepción realizamos ventas sin factura.</p>
-La garantía de todos los productos es de 12 meses, salvo algunos perifericos que tienen 3 meses. (Procesadores, Mothers Gigabyte y Asus tienen 36 meses de garantía)
-<br> <br>
-<h3>¿Necesito un presupuesto, cómo hago?</h3> 
-<br>
-<p> Desde nuestra web podés hacer clic en la imagen ‘Arma tu PC’ y seleccionar los componentes, y el sistema va sumando los productos. También tenemos varias configuraciones de PC bajo la solapa Computadoras. De tener alguna duda sobre los componentes o no estás familiarizado sobre el armado de una PC, siempre podés consultarnos para solicitar un presupuesto personalizado.</p>
-<br>
+<p> En todas las ventas que realizamos se entrega factura electrónica fiscal. Bajo ningún concepto ni excepción realizamos ventas sin factura.  
+La garantía de todos los productos es de 12 meses.</p> <br>
+
 <h3>¿Cuáles son los horarios de atención?</h3>
 <br>
 <p> Los horarios de atención son de lunes a viernes de 8:30 a 17hs, y sábados de 9 a 12:30hs.</p>
@@ -73,39 +96,51 @@ La garantía de todos los productos es de 12 meses, salvo algunos perifericos qu
 <br>
 <h3>¿Hacen factura A? ¿Cómo la solicito?</h3>
 <br>
-<p> Si, por supuesto. En las observaciones del pedido tendrás aclarar que es con factura A y deberás enviar el número de CUIT correspondiente.</p>
-Para resolver otro tipo de consultas podés comunicarte al correo ventas@digitalhouse.com.ar o a los teléfonos 0341-4823948 / +543401596707 en los horarios de atención al público.
-<br><br><br><br>
+<p> Si, por supuesto. En las observaciones del pedido tendrás aclarar que es con factura A y deberás enviar el número de CUIT correspondiente.
+Para resolver otro tipo de consultas podés comunicarte al correo ventas@digitalhouse.com.ar o a los teléfonos 0341-4823948 / +543401596707 en los horarios de atención al público.</p>
+<br><br>
 <br>
 <form action="resultado.html" method="POST">
         <p>
-        <label for="nombre"><h3> Nombre y Apellido:</h3><br></label>
+        <label for="nombre"><h3> Nombre y Apellido: </h3><br> </label>
         <input id="nombre" type="text" name="nombre" valule="" placeholder="Ingrese su nombre">
         </p> 
-        <br>
         <p>
-        <label for="email"><h3> Email:</h3> </label><br>
+        <label for="email"><h3> Email:</h3> <br></label>
         <input id="email" type="email" name="email" valule="" placeholder="Ingrese su email" required >
         </p> 
-        <br>
         <p>
-        <label for="telefono"><h3> Telefono:</h3> </label><br>
+        <label for="telefono"><h3> Telefono:</h3><br> </label>
         <input id="telefono" type="text" name="telefono" valule="" placeholder="Ingrese su numero de telefono">
         </p>
-        <br>
         <p>
-        <label for="asunto"><h3>Asunto:</h3> </label><br>
+        <label for="asunto"><h3>Asunto:</h3><br> </label>
         <input id="asunto" type="text" name="asunto" valule="" >
         </p> 
         <br>
-        <label for="det"><h3>Detalle:</h3></label> <br>
+        <label for="det"><h3>Detalle:</h3> <br></label> <br>
         <textarea id="det" name="det" rows="8" cols="80">
         </textarea>
         <br><br>
-        <button class="enviar"  type="submit" name="submit"> <h3>Enviar</h3></button>          
+        <button type="button" class="btn btn-info" type="submit" name="submit"> <b>Enviar</b></button>
+        <br><br>
 </form>
-<footer>
-<h1>Aca podemos poner una imagen con el copyrigth 2019 y el footer</h1> 
-</footer>
+</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <img class="logo" src="img/LOGO.png" alt="logotipo" class="logo">
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav m-auto">
+        <a class="nav-item nav-link active" href="#">QUIENES SOMOS <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">SUCURSALES</a>
+        <a class="nav-item nav-link" href="#">REGISTRATE</a>
+        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">CONTACTANOS</a>
+    </div>
+</div>
+</nav>
+
+
 </body>
 </html>
