--- a/preguntas.html
+++ b/preguntas.html
@@ -10,29 +10,29 @@
 </head>
 <body>
     <header>
-        <DIV class="container">
         
+        <div class="container">
             <nav class="navbar navbar-expand-lg styles=backgroun-color: bg-danger fixed-top">
                 <img class="logo" src="img/LOGO.png" alt="logotipo" class="logo">
                 <div class="collapse navbar-collapse mb-30" id="navbarTogglerDemo02"  >
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#" >INICIO <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#" ><h6>INICIO</h6> <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#" >PRODUCTOS <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#" ><h6>PRODUCTOS</h6> <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">PROMOCIONES</a>
+                            <a class="nav-link" href="#"><h6>PROMOCIONES</h6></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">AYUDA</a>
+                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><h6>AYUDA</h6></a>
                         </li>
                     </ul>
                 </div>
             </nav>
-        </DIV>
-         <br>
+        </div>
+        <br>
     </header>
 <div class="preguntas">
 <h1> PAGO EN FORMA ONLINE (NO PRESENCIAL)</h1> 
@@ -122,7 +122,7 @@ Para resolver otro tipo de consultas podés comunicarte al correo ventas@digital
         <textarea id="det" name="det" rows="8" cols="80">
         </textarea>
         <br><br>
-        <button type="button" class="btn btn-info" type="submit" name="submit"> <b>Enviar</b></button>
+        <button type="button" class="btn btn-info" type="submit" name="submit"> <h2>Enviar</h2></button>
         <br><br>
 </form>
 </div>
@@ -133,10 +133,10 @@ Para resolver otro tipo de consultas podés comunicarte al correo ventas@digital
 </button>
 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav m-auto">
-        <a class="nav-item nav-link active" href="#">QUIENES SOMOS <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">SUCURSALES</a>
-        <a class="nav-item nav-link" href="#">REGISTRATE</a>
-        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">CONTACTANOS</a>
+            <a class="nav-item nav-link active" href="#"><h6>QUIENES SOMOS</h6> <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#"><h6>SUCURSALES</h6></a>
+            <a class="nav-item nav-link" href="#"><h6>REGISTRATE</h6></a>
+            <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><h6>CONTACTANOS</h6></a>
     </div>
 </div>
 </nav>
