--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,14 @@
                             <a class="nav-link" href="#"><h6>PROMOCIONES</h6></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><h6>AYUDA</h6></a>
+                            <a class="nav-link" href="preguntas.html" tabindex="-1" aria-disabled="true"><h6>AYUDA</h6></a>
+                        </li>
+                        <li>
+                            <button type="button" class="btn btn-danger"><h6>INGRESAR</h6></button>
+
+                        </li>
+                        <li>
+                            <button type="button" class="btn btn-primary"><h6>REGISTRARSE</h6></button>
                         </li>
                     </ul>
                 </div>
@@ -81,7 +88,7 @@ satisfaciendo las necesidades de nuestros clientes, accionistas, capital humano 
 </button>
 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav m-auto">
-        <a class="nav-item nav-link active" href="#"><h6>QUIENES SOMOS</h6> <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="contacto.html"><h6>QUIENES SOMOS</h6> <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="#"><h6>SUCURSALES</h6></a>
         <a class="nav-item nav-link" href="#"><h6>REGISTRATE</h6></a>
         <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><h6>CONTACTANOS</h6></a>
