--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Ayuda - Tecno Movil </title>
+    <title>Inicia Sesión - Tecno Movil </title>
 </head>
 <body>
         <header>
@@ -34,7 +34,39 @@
                 </div>
                 <br>
             </header>
-           <!--  ACA VA LO DE LA PAGINA  -->
+           <div class="login">
+               <h1> <b> ¡BIENVENIDO A TECNO MOVIL!</b></h1>
+               <br>
+                <h2>Te damos la bienvenida al sitio oficial de Tecno Movil</h2>
+
+                <p>
+                    <label for="email"><h3> Usuario o Correo electronico:</h3> <br></label>
+                    <input id="email" type="email" name="email" valule=""  required >
+                </p>
+                <p>
+                    <label for="pass"> <h3>Contraseña:</h3> </label><br>
+                    <input id="pass" type="password" name="pass" valule="" required >
+                </p> 
+                <br>
+                <button type="button" class="btn btn-primary"><h4>INICIAR SESIÓN</h4></button>
+                <br><br>
+                <h4>¿No tienes una cuenta?</h4>
+                <br>
+                <button type="button" class="btn btn-primary1"><h4>REGISTRARME</h4></button>
+                <br><br>
+                <h4>¿Tienes problemas?</h4>
+                <ul>
+                    <li>
+                           <a href=""> Olvidé mi contraseña.</a>
+                    </li>       
+                    <li> 
+                           <a href=""> Olvidé mi nombre de usuario.</a>
+                    </li>    
+                    <li>
+                          <a href="">  No me llegó el email de confirmacón.</a>
+                    </li>
+                </ul>
+           </div>
             <nav class="navbar navbar-expand-lg navbar-light bg-dark">
                     <img class="logo" src="img/LOGO.png" alt="logotipo" class="logo">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +76,7 @@
                     <div class="navbar-nav m-auto">
                             <a class="nav-item nav-link active" href="#"><h6>QUIENES SOMOS</h6> <span class="sr-only">(current)</span></a>
                             <a class="nav-item nav-link" href="#"><h6>SUCURSALES</h6></a>
-                            <a class="nav-item nav-link" href="#"><h6>REGISTRATE</h6></a>
+                            <a class="nav-item nav-link" href="registrar.html"><h6>REGISTRATE</h6></a>
                             <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><h6>CONTACTANOS</h6></a>
                     </div>
                 </div>
