botones ingresar y registrarse en index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><h6>AYUDA</h6></a>
                         </li>
+                        <li>
+                            <button type="button" class="btn btn-danger"><h6>INGRESAR</h6></button>
+
+                        </li>
+                        <li>
+                            <button type="button" class="btn btn-primary"><h6>REGISTRARSE</h6></button>
+                        </li>
                     </ul>
                 </div>
             </nav>
