cambie barra de registro y login en la pagina index y linkie las paginas

--- a/index.html
+++ b/index.html
@@ -16,27 +16,38 @@
                 <div class="collapse navbar-collapse mb-30" id="navbarTogglerDemo02"  >
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#" ><h6>INICIO</h6> <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">INICIO <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#" ><h6>PRODUCTOS</h6> <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">PRODUCTOS <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><h6>PROMOCIONES</h6></a>
+                            <a class="nav-link" href="index.html">PROMOCIONES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><h6>AYUDA</h6></a>
-                        </li>
-                        <li>
-                            <button type="button" class="btn btn-danger"><h6>INGRESAR</h6></button>
-
-                        </li>
-                        <li>
-                            <button type="button" class="btn btn-primary"><h6>REGISTRARSE</h6></button>
+                            <a class="nav-link" href="preguntas.html" tabindex="-1" aria-disabled="true">AYUDA</a>
                         </li>
                     </ul>
                 </div>
             </nav>
+        </div>
+
+        <div>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light mr-auto">
+                        <a class="navbar-brand ml-auto" href="login.html">Ingresar</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Ingresar" aria-controls="Ingresar" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon "></span>
+                        </button>
+                        <a class="navbar-brand " href="registrar.html">Registrarse</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Registrarse" aria-controls="Registrarse" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+                        </button> 
+                        <a class="navbar-brand " href="#">Compras</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Registrarse" aria-controls="Compras" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+                        </button>
+                        </div>
+                      </nav>
         </div>
     
     
@@ -103,10 +114,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav m-auto">
-                    <a class="nav-item nav-link active" href="#"><h6>QUIENES SOMOS</h6> <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#"><h6>SUCURSALES</h6></a>
-                    <a class="nav-item nav-link" href="#"><h6>REGISTRATE</h6></a>
-                    <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><h6>CONTACTANOS</h6></a>
+                    <a class="nav-item " href="contacto.html">| QUIENES SOMOS  |</a>
+                    <br>
+                    <a class="nav-item " href="contacto.html">  SUCURSALES  |</a>
+                    <br>
+                    <a class="nav-item " href="contacto.html">  CONTACTANOS  |</a>
             </div>
         </div>
     </nav>
