--- a/login.html
+++ b/login.html
@@ -17,16 +17,16 @@
                         <div class="collapse navbar-collapse mb-30" id="navbarTogglerDemo02"  >
                             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="#" ><h6>INICIO</h6> <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index.html">INICIO<span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="#" ><h6>PRODUCTOS</h6> <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index.html" >PRODUCTOS <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><h6>PROMOCIONES</h6></a>
+                                    <a class="nav-link" href="index.html">PROMOCIONES</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><h6>AYUDA</h6></a>
+                                    <a class="nav-link" href="preguntas.html" tabindex="-1" aria-disabled="true">AYUDA</a>
                                 </li>
                             </ul>
                         </div>
@@ -74,10 +74,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav m-auto">
-                            <a class="nav-item nav-link active" href="#"><h6>QUIENES SOMOS</h6> <span class="sr-only">(current)</span></a>
-                            <a class="nav-item nav-link" href="#"><h6>SUCURSALES</h6></a>
-                            <a class="nav-item nav-link" href="registrar.html"><h6>REGISTRATE</h6></a>
-                            <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><h6>CONTACTANOS</h6></a>
+                            <a class="nav-item nav-link active" href="contacto.html">QUIENES SOMOS <span class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link" href="contacto.html">SUCURSALES</a>
+                            <a class="nav-item nav-link disabled" href="contacto.html" tabindex="-1" aria-disabled="true">CONTACTANOS</a>
                     </div>
                 </div>
                 </nav>
