--- a/registrar.html
+++ b/registrar.html
@@ -17,16 +17,16 @@
                         <div class="collapse navbar-collapse mb-30" id="navbarTogglerDemo02"  >
                             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="#" ><h6>INICIO</h6> <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index.html" >INICIO<span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="#" ><h6>PRODUCTOS</h6> <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index.html" >PRODUCTOS <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><h6>PROMOCIONES</h6></a>
+                                    <a class="nav-link" href="index.html">PROMOCIONES</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><h6>AYUDA</h6></a>
+                                    <a class="nav-link" href="preguntas.html" tabindex="-1" aria-disabled="true">AYUDA</a>
                                 </li>
                             </ul>
                         </div>
