--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/b8bd14391e.js" crossorigin="anonymous"></script>
     <title>Tecno Movil</title>
 </head>
 <body>
@@ -117,6 +118,8 @@
             <a class="nav-item nav-link active" href="contacto.html">Quienes Somos <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="Registrar2.html">Registrarse <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="preguntas.html">Ayuda<span class="sr-only">(current)</span></a>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-facebook-f"></i>
             
         </div>
     </div>
