--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
     </div>
     <!--  BARRA  SECUNDARIA -->
-    <div>
+    <!-- <div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light mr-auto">
             <a class="navbar-brand ml-auto" href="login.html">Ingresar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Ingresar" aria-controls="Ingresar" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
             </button>
         </div>
     </nav>
-</div>
+</div>  -->
 
 <!--  Banner  -->
 
@@ -86,22 +86,22 @@
     
     <div class="row">
         <div class="col-md-6 col-lg-4">
-            <img class="foto"  src="img/celu1.jpg_250" alt="celu1">
+            <img class="foto"  src="img/apple-iphone-x--1.jpg" alt="Iphone X">
             <img class="oferta" src="img/super sale .png" alt="supersale">
-            <h2>xxxxxxxxxxxxxxx</h2>
-            <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+            <h2>Iphone X 256 gb</h2>
+            <p>ARS $85.000</p>
         </div>   
         <div class="col-md-6 col-lg-4">
-            <img class="foto" src="img/celu2.jpg" alt="celu2">
+            <img class="foto" src="img/samsung-galaxy-s9-001.jpg" alt="Samsung s9">
             <img class="oferta" src="img/super sale .png" alt="supersale"> 
-            <h2>xxxxxxxxxxxxxxx</h2>
-            <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>   
+            <h2>Samsung S9</h2>
+            <p>ARS $29.000</p>   
         </div>
         <div class="col-md-6 col-lg-4">
-            <img class="foto" src="img/celu3.jpg" alt="celu3">
+            <img class="foto" src="img/moto-g6.jpeg" alt="Motorola G6">
             <img class="oferta" src="img/super sale .png" alt="supersale">  
-            <h2>xxxxxxxxxxxxxxx</h2>
-            <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+            <h2>Motorola G6</h2>
+            <p>ARS $16.000</p>
         </div>   
     </div>
 </div>
@@ -118,9 +118,9 @@
             <a class="nav-item nav-link active" href="contacto.html">Quienes Somos <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="Registrar2.html">Registrarse <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="preguntas.html">Ayuda<span class="sr-only">(current)</span></a>
-            <i class="fab fa-twitter"></i>
+            <!--     <i class="fab fa-twitter"></i>
             <i class="fab fa-facebook-f"></i>
-            
+            -->
         </div>
     </div>
 </nav>
