--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="preguntas.html" tabindex="-1" aria-disabled="true">AYUDA</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html" tabindex="-1" aria-disabled="true"><img src="img/usuario.png" alt="" width="25px"></a>
+                    </li>
                 </ul>
             </div>
         </nav>
