--- a/contacto.html
+++ b/contacto.html
@@ -102,7 +102,7 @@
                 </div>
                 <!--  BARRA DE PIE DE PAGINA  -->
                 
-                <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+                <nav class="navbar navbar-expand-lg navbar-light ">
                     <img class="logo" src="img/LOGO.png" alt="logotipo" class="logo">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
