--- a/productos.html
+++ b/productos.html
@@ -107,7 +107,7 @@
       
     
     <!--  FOOTER  -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light "">
         <img class="logo" src="img/LOGO.png" alt="logotipo" class="logo">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
