--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active ">
-            <img src="img/promo1.jpg" class="d-block w-100" alt="1">
+            <img src="img/diapositiva-01.jpg" class="d-block w-100" alt="1">
         </div>
         <div class="carousel-item">
-            <img src="img/promo2.jpg" class="d-block w-100" alt="2">
+            <img src="img/diapositiva-03.jpg" class="d-block w-100" alt="2">
         </div>
         <div class="carousel-item">
-            <img src="img/promo3.jpg" class="d-block w-100" alt="3">
+            <img src="img/diapositiva-04.webp" class="d-block w-100" alt="3">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
