--- a/preguntas.html
+++ b/preguntas.html
@@ -11,7 +11,7 @@
 <body class="preguntasbody">
    <!--  BARRA DE INICIO -->
    <nav class="navbar navbar-expand-lg navbar-light ">
-    <img class="logo" src="img/LOGO.png" alt="logotipo" class="logo">
+    <a href="index.html"><img src="img/LOGO.png" alt="logotipo" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -136,19 +136,21 @@
             
          <form class="formularioregistro">  
                 <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="inputEmail4"> Nombre</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Nombre">
+                    <div class="form-group col-md-7 m-auto">
+                        <label for="name"> Nombre</label>
+                        <input type="name" class="form-control" id="name" placeholder="Nombre">
                     </div>
-                    <div class="form-group col-md-6">
+                    
+                    <div class="form-group col-md-7 m-auto">
                         <label for="apellido"> Apellido</label>
-                        <input type="apellido" class="form-control" id="inputPassword4" placeholder="Apellido">
+                        <input type="apellido" class="form-control" id="apellido" placeholder="Apellido">
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-7 m-auto">
                         <label for="inputEmail4"> Email</label>
                         <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
                     </div>
-                    <div class="form-group">
+                    <br>
+                    <div class="form-group col-md-7 m-auto ">
                             <label for="exampleFormControlTextarea1">Envianos tu consulta</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" cols="80"></textarea>
                           </div>
@@ -164,14 +166,14 @@
         <!--  BARRA DE PIE DE PAGINA  -->
 
 <nav class="navbar navbar-expand-lg navbar-light ">
-    <img class="logo" src="img/LOGO.png" alt="logotipo" class="logo">
+    <a href="index.html"><img src="img/LOGO.png" alt="logotipo" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav m-auto">
             <a class="nav-item nav-link active" href="contacto.html">Quienes Somos <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link active" href="Registrar2.html">Registrarse <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="Registrar.php">Registrarse <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="preguntas.html">Ayuda<span class="sr-only">(current)</span></a>
             <!--     <i class="fab fa-twitter"></i>
             <i class="fab fa-facebook-f"></i>
