--- a/contacto.html
+++ b/contacto.html
@@ -111,7 +111,7 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav m-auto">
                             <a class="nav-item nav-link active" href="contacto.html">Quienes Somos <span class="sr-only">(current)</span></a>
-                            <a class="nav-item nav-link active" href="Registrar2.html">Registrarse <span class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link active" href="Registrar.php">Registrarse <span class="sr-only">(current)</span></a>
                             <a class="nav-item nav-link active" href="preguntas.html">Ayuda<span class="sr-only">(current)</span></a>
                             
                         </div>
