--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="preguntas.html" tabindex="-1" aria-disabled="true">AYUDA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="login.html" tabindex="-1" aria-disabled="true"><img src="img/usuario.png" alt="" width="25px"></a>
+                    <a class="nav-link" href="login.php" tabindex="-1" aria-disabled="true"><img src="img/usuario.png" alt="" width="25px"></a>
                 </li>
             </ul>       
         </div>
