indicadores de  header section y footer

--- a/condiciones.html
+++ b/condiciones.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <!--  BARRA DE INICIO -->
+    <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <a href="index.html"><img src="img/LOGO.png" alt="logotipo" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +37,9 @@
             </div>
         </div>
     </nav>
+</header>
 <!-- TERMINOS Y CONDICIONES -->
+<section>
 <div class="cond" >
     <br>
 <h3>Gracias por ingresar a nuestro sitio web (en adelante el "Sitio Web"). Por favor lea los “Términos y Condiciones” (en adelante los "Términos") antes de usar el Sitio Web.</h3>
@@ -135,8 +138,9 @@ Si nos ha proporcionado información sobre Usted y desea copias de esta informac
 <br><br>
 </p> 
 </div>  
+</section>
 <!--  BARRA DE PIE DE PAGINA  -->
-
+<footer>
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <a href="index.html"><img src="img/LOGO.png" alt="logotipo" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -153,5 +157,6 @@ Si nos ha proporcionado información sobre Usted y desea copias de esta informac
         </div>
     </div>
 </nav>
+</footer>
 </body>
 </html>
