--- a/producto2.html
+++ b/producto2.html
@@ -10,6 +10,7 @@
 </head>
 <body class="preguntasbody">
    <!--  BARRA DE INICIO -->
+   <header>
    <nav class="navbar navbar-expand-lg navbar-light ">
     <a href="index.html"><img src="img/LOGO.png" alt="logotipo" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,11 +35,13 @@
         </div>
     </div>
 </nav>
-
+</header>
 <!-- Descripcion del procucto -->
+<section>
 
+</section>
  <!--  BARRA DE PIE DE PAGINA  -->
-
+<footer>
  <nav class="navbar navbar-expand-lg navbar-light ">
     <a href="index.html"><img src="img/LOGO.png" alt="logotipo" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +58,7 @@
         </div>
     </div>
 </nav>
-
+</footer>
         
     </body>
     </html>
