--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <!--  BARRA DE INICIO -->
+    <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <a href="index.html"><img src="img/LOGO.png" alt="logotipo" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,10 +36,10 @@
             </div>
         </div>
     </nav>
-    
+</header>
 
 <!--  Banner  -->
-
+<section>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -65,7 +66,6 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-
 <!--  los mas vendidos  -->
 <div class="productos-mas-vendidos">
     
@@ -92,9 +92,9 @@
         </div>   
     </div>
 </div>
-
+</section>
 <!--  BARRA DE PIE DE PAGINA  -->
-
+<footer>
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <a href="index.html"><img src="img/LOGO.png" alt="logotipo" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -117,6 +117,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-
+</footer>
 </body>
 </html>
