--- a/producto1.html
+++ b/producto1.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Preguntas Frecuentes - Tecno Movil</title>
+    <title>Iphone 8 - Tecno Movil</title>
 </head>
-<body class="preguntasbody">
+<body class="producto">
    <!--  BARRA DE INICIO -->
+<header>
    <nav class="navbar navbar-expand-lg navbar-light ">
     <a href="index.html"><img src="img/LOGO.png" alt="logotipo" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,11 +35,13 @@
         </div>
     </div>
 </nav>
-
+</header>
 <!-- Descripcion del procucto -->
+<section>
 
+</section>
  <!--  BARRA DE PIE DE PAGINA  -->
-
+<footer>
  <nav class="navbar navbar-expand-lg navbar-light ">
     <a href="index.html"><img src="img/LOGO.png" alt="logotipo" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +58,6 @@
         </div>
     </div>
 </nav>
-
-        
+</footer>
     </body>
     </html>
