--- a/exito.html
+++ b/exito.html
@@ -37,11 +37,14 @@
 </nav>
 </header>
 <section>
-    <center>
-    <br><br><br><br><br><br><br><br><br><br><br>
-<img src="img/exito consulta.png" alt=""> 
+    
+        <div class="errores">
 
-</center>
+        
+    <br><br><br><br><br><br>
+<img src="img/exito consulta.png" alt=""> 
+</div>
+
 
 </section>
  <!--  BARRA DE PIE DE PAGINA  -->
