--- a/productos.html
+++ b/productos.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="productos.html">PRODUCTOS <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="preguntas.html" tabindex="-1" aria-disabled="true">AYUDA</a>
+                    <a class="nav-link" href="preguntas.php" tabindex="-1" aria-disabled="true">AYUDA</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="login.php" tabindex="-1" aria-disabled="true"><img src="img/usuario.png" alt="" width="25px"></a>
@@ -43,45 +43,45 @@
         
         
         <div class="col-md-5 col-lg-4">
-            <img src="img/iphone-8-03.png" alt="logotipo" class="img-fluid" width="300px"> 
-            <h2>Iphone 8</h2>
+            <a href="producto1.html"><img src="img/iphone-8-03.png" alt="logotipo" class="img-fluid" width="300px"></a> 
+            <a href="producto1.html"><h2>Iphone 8</h2></a>
             <p>ARS $65.000</p>
             <br>
-            <img src="img/samsung-s8-01.jpg" alt="logotipo" class="img-fluid" width="300px">
-            <h2>Samsung S8</h2>
+            <a href="producto4.html"><img src="img/samsung-s8-01.jpg" alt="logotipo" class="img-fluid" width="300px"></a>
+            <a href="producto2.html"><h2>Samsung S8</h2></a>
             <p>ARS $47.000</p>
             <br>
             <img src="img/moto-g5.webp" alt="logotipo" class="img-fluid" width="300px">
-            <h2>Motorola G5</h2>
+            <a href="producto7.html"><h2>Motorola G5</h2></a>
             <p>ARS $8.500</p>
             <br>
         </div>
         <div class="col-md-5 col-lg-4">
-            <img src="img/apple-iphone-x--1.jpg" alt="logotipo" class="img-fluid" width="300px">
+            <a href="producto2.html"><img src="img/apple-iphone-x--1.jpg" alt="logotipo" class="img-fluid" width="300px"></a>
             <br>
-            <h2>Iphone X 256 gb</h2>
+            <a href="producto2.html"><h2>Iphone X 256 gb</h2></a>
             <p>ARS $85.000 </p> 
             <br>
             <img src="img/samsung-galaxy-s9-001.jpg" alt="logotipo" class="img-fluid" width="300px">
-            <h2>Samsung S9</h2>
+            <a href="producto5.html"><h2>Samsung S9</h2></a>
             <p>ARS $29.000</p>
             <br>
             <img src="img/moto-g6.jpeg" alt="logotipo" class="img-fluid" width="300px">
-            <h2>Motorola G6</h2>
+            <a href="producto8.html"><h2>Motorola G6</h2></a>
             <p>ARS $16.000</p>
             <br>
         </div>
         <div class="col-md-5 col-lg-4">
-            <img src="img/apple-iphone-11-pro-1.jpg" alt="logotipo" class="img-fluid" width="300px">
-            <h2>Iphone 11 PRO</h2>
+            <a href="producto3.html"><img src="img/apple-iphone-11-pro-1.jpg" alt="logotipo" class="img-fluid" width="300px"></a>
+            <a href="producto3.html"><h2>Iphone 11 PRO</h2></a>
             <p>ARS $125.000</p>
             <br>
             <img src="img/samsung-galaxy-S10plus.jpg" alt="logotipo" class="img-fluid" width="300px">
-            <h2>Samsung S10 Plus</h2>
+            <a href="producto6.html"><h2>Samsung S10 Plus</h2></a>
             <p>ARS $125.000</p>
             <br>
             <img src="img/moto-g7.jpg" alt="logotipo" class="img-fluid" width="300px">
-            <h2>Motorola G7</h2>
+            <a href="producto9.html"><h2>Motorola G7</h2></a>
             <p>ARS $18.000</p>
             <br>
         </div>
