--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
             <img class="foto"  src="img/apple-iphone-x--1.jpg" alt="Iphone X">
             <img class="oferta" src="img/super sale .png" alt="supersale">
             <h2>Iphone X 256 gb</h2>
-            <p>ARS $85.000</p>
+            <p class="index">ARS $85.000</p>
         </div>   
         <div class="col-md-6 col-lg-4">
             <img class="foto" src="img/samsung-galaxy-s9-001.jpg" alt="Samsung s9">
             <img class="oferta" src="img/super sale .png" alt="supersale"> 
             <h2>Samsung S9</h2>
-            <p>ARS $29.000</p>   
+            <p class="index">ARS $29.000</p>   
         </div>
         <div class="col-md-6 col-lg-4">
             <img class="foto" src="img/moto-g6.jpeg" alt="Motorola G6">
             <img class="oferta" src="img/super sale .png" alt="supersale">  
             <h2>Motorola G6</h2>
-            <p>ARS $16.000</p>
+            <p class="index">ARS $16.000</p>
         </div>   
     </div>
 </div>
