todo liinkeado bien

--- a/condiciones.html
+++ b/condiciones.html
@@ -144,9 +144,9 @@ Si nos ha proporcionado información sobre Usted y desea copias de esta informac
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav m-auto">
-            <a class="nav-item nav-link active" href="contacto.html">Quienes Somos <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="contacto.php">Quienes Somos <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="Registrar.php">Registrarse <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link active" href="preguntas.html">Ayuda<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="preguntas.php">Ayuda<span class="sr-only">(current)</span></a>
             <!--     <i class="fab fa-twitter"></i>
             <i class="fab fa-facebook-f"></i>
             -->
